* Instinct Release 0.1.0 *

o Initial public release.