@@ -18,13 +18,16 @@ verification API (similar to JUnit's Assert); and JUnit test runner integration.
 
 The distribution contains the following contents:
 
-o README                    - This readme file.
-o LICENCE                   - Instinct licence file.
-o NOTICE                    - Licence notices for libraries used in Instinct.
-o RELEASE-NOTES             - Release notes for this & previous releases.
-o instinct-<version>.jar    - Instinct Jar file, source code is included in the Jar for convenience.
-o lib/                      - Libraries required by Instinct at runtime, see below for details.
-o docs/api/                 - Instinct API javadoc (does not include internal API).
+o README                            - This readme file.
+o LICENCE                           - Instinct licence file.
+o NOTICE                            - Licence notices for libraries used in Instinct.
+o RELEASE-NOTES                     - Release notes for this & previous releases.
+o instinct-<version>.jar            - Instinct Jar file, source code is included in the
+                                      Jar for convenience.
+o instinct-<version>-javadoc.jar    - Instinct API javadoc (does not include internal API).
+                                      Jar for convenience.
+o lib/                              - Libraries required by Instinct at runtime (including
+                                      licences), see below for details.
 
 Instinct depends on the following libraries at runtime.
 
